# RWA-RBT-backend

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose-env.yaml  docker-compose-prod.yaml  docker-compose.yaml
.cargo/: config.toml
config/: config.toml  config_docker.toml  log4rs.yaml
crates/lib/common/: Cargo.toml
crates/lib/common/src/: lib.rs
crates/lib/common/src/config/: config.rs  error.rs  logger.rs  mod.rs  model.rs  nacos.rs  response.rs
crates/lib/common/src/domain/dto/: holding_dto.rs  interest_detail_dto.rs  invoice_dto.rs  invoice_redis_dto.rs  mod.rs  purchase_invoice_dto.rs  query_invoice_dto.rs
crates/lib/common/src/domain/entity/: daily_interest_accrual.rs  enterprise.rs  invoice.rs  invoice_batch.rs  invoice_status.rs  mod.rs  rbt_holding.rs  repayment.rs  settlement_nft.rs  token.rs  transaction.rs  user.rs  user_invoice_holding.rs
crates/lib/common/src/utils/: crypto_utils.rs  get_time.rs  mod.rs  pagination.rs  serde_format.rs  snowflake_util.rs  wallet_utils.rs
crates/lib/common/src/validate/: validate.rs
crates/lib/configs/: Cargo.toml
crates/lib/configs/src/: cfgs.rs  get_config.rs  lib.rs
crates/lib/pharos_interact/: .env_example  ABI.md  Cargo.toml  README.md  invoice_abi.json
crates/lib/pharos_interact/src/: lib.rs  main.rs
crates/lib/service/: Cargo.toml
crates/lib/service/src/: cache.rs  db.rs  error.rs  lib.rs
crates/lib/service/src/cache/: invoice_redis_service.rs  mod.rs
crates/lib/service/src/invoice/: invoice_service.rs  mod.rs  scheduled_tasks.rs
crates/lib/service/src/repository/: daily_interest_accrual_repository.rs  enterprise_repository.rs  invoice_batch_repository.rs  invoice_repository.rs  mod.rs  token_repository.rs  transaction_repository.rs  user_invoice_holding_repository.rs  user_repository.rs
crates/lib/service/src/service/: interest_calculation_service.rs  mod.rs  purchase_service.rs  token_service.rs
crates/test/pharos_test/: ABI.md  Cargo.toml  invoice_abi.json
crates/test/pharos_test/src/: main.rs
doc/: USAGE.md  cargo.md
web/: Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  start.sh  vite.config.ts
web/.docker-compose/nginx/conf.d/: my.conf
web/src/: App.tsx  index.tsx  setupProxy.js  vite-env.d.ts
web/src/components/: AddBillDialog.tsx  ApiTestComponent.tsx  BillDetailDialog.tsx  BillDialog.tsx  BillManagement.tsx  BillMarketTable.tsx  BillSearchBar.tsx  BillTable.tsx  CreateInvoiceDialog.tsx  DebtDetailDialog.tsx  EnterpriseBindingDialog.tsx  EnterpriseRegistration.tsx  Footer.tsx  Header.tsx  HomePage.tsx  InvoiceBatchDetail.tsx  InvoiceBatchList.tsx  InvoiceManagement.tsx  Layout.tsx  MyTokenList.tsx  PendingSignatureList.tsx  RepayDebtList.tsx  RepaymentHistoryDialog.tsx  TokenDetailDialog.tsx  TokenList.tsx  TokenPurchaseForm.tsx  TokenTable.tsx  TokenizationDialog.tsx  WalletConnect.tsx
web/src/context/: AuthContext.tsx
web/src/hooks/: useWallet.ts
web/src/pages/: InvoiceBatchPage.tsx  MyIssuedTokens.tsx  TokenMarket.tsx
web/src/services/: api.ts  apiService.ts  authService.ts  invoiceService.ts  tokenService.ts  walletService.ts
web/src/types/: index.ts
web/src/utils/: dateUtils.ts  formatters.ts  httpInterceptor.ts
