[workspace]
members = [
    "crates/lib/common",
    "crates/lib/configs",
    "crates/lib/service",
    "crates/lib/pharos_interact",
    "crates/bin/api-server",
]
resolver = "3"

[workspace.package]
authors = ["huang <ksxyh6181@gmail.com>"]
edition = "2024"
homepage = "https://github.com/ksxyh6181"
license = "Apache-2.0"
publish = false
repository = ""
version = "0.1.0"

[profile.release]
debug = true
lto = true
opt-level = 3 # Optimize for size. "z"
panic = 'abort'
# strip = "symbols" # none(false) debuginfo symbols(true).

[workspace.dependencies]
common = { path = "crates/lib/common" }
configs = { path = "crates/lib/configs" }
service = { path = "crates/lib/service" }
pharos_interact = { path = "crates/lib/pharos_interact" }

salvo = { version = "0.77.0", features = [
  "serve-static",
  "oapi",
  "logging",
  "catch-panic",
  "websocket",
  "session",
  "sse",
  "cors",
] }
log4rs = "1.3.0"
salvo-oapi = { version = "0.77.0", features = ["chrono", "uuid"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = "0.1.40"
thiserror = "2.0.12"
async-trait = "0.1.77"
log = "0.4.20"
env_logger = "0.11.1"
nacos-sdk = { version = "0.4.3", features = ["naming"] }
config = "0.15.9"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
toml = "0.8.20"
chrono = "0.4.32"
lazy_static = "1.4.0"
anyhow = "1.0.97"
bigdecimal = { version = "0.4.3", features = ["std", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
once_cell = "1.20.2"
redis = { version = "0.29.0", features = ["tokio-comp", "json"] }
taos = { version = "0.12.3", default-features = false, features = ["ws"] }

ethers = "2.0"
rand = "0.9.0"
hex = "0.4"
moka = { version = "0.12", features = ["future"] }
jsonwebtoken = "9.0"

captcha = "0.0.9"
md5 = "0.7.0"

mongodb = { version = "3.2.1" }
