[workspace]
members = [
    "crates/lib/common",
    "crates/lib/configs",
    "crates/lib/service",
    "crates/lib/pharos_interact",
    "crates/bin/api-server",
]
resolver = "3"
[workspace.package]
authors = ["huang <ksxyh6181@gmail.com>"]
edition = "2024"
homepage = "https://github.com/ksxyh6181"
license = "Apache-2.0"
publish = false
repository = ""
version = "0.1.0"

[profile.release]
debug = true
lto = "thin"
opt-level = "z" # Optimize for size. "z"
panic = 'abort'
# strip = "symbols" # none(false) debuginfo symbols(true).

[workspace.dependencies]
common = { path = "crates/lib/common" }
configs = { path = "crates/lib/configs" }
service = { path = "crates/lib/service" }
pharos_interact = { path = "crates/lib/pharos_interact" }

salvo = { version = "0.78.0", features = [
  "serve-static",
  "oapi",
  "logging",
  "catch-panic",
  "websocket",
  "session",
  "sse",
  "cors",
] }
log4rs = "1.3.0"
salvo-oapi = { version = "0.78.0", features = ["chrono", "uuid"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
thiserror = "2.0.12"
async-trait = "0.1.88"
log = "0.4.27"
env_logger = "0.11.8"
nacos-sdk = { version = "0.5.0", features = ["naming"] }
config = "0.15.11"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
toml = "0.8.22"
chrono = "0.4.41"
lazy_static = "1.5.0"
anyhow = "1.0.98"
bigdecimal = { version = "0.4.8", features = ["std", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
once_cell = "1.21.3"
redis = { version = "0.30.0", features = ["tokio-comp", "json"] }
taos = { version = "0.12.3", default-features = false, features = ["ws"] }

ethers = "2.0.14"
rand = "0.9.1"
hex = "0.4.3"
moka = { version = "0.12.10", features = ["future"] }
jsonwebtoken = "9.3.1"

captcha = "1.0.0"
md5 = "0.7.0"

mongodb = { version = "3.2.3" }
rs-snowflake = {version = "0.6.0" }
