[package]
name = "common"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
salvo = { workspace = true }
salvo-oapi = { workspace = true }
mongodb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }

nacos-sdk = { workspace = true, features = ["naming"] }
config = { workspace = true }
env_logger = { workspace = true }
toml = { workspace = true }
validator = { workspace = true }
bigdecimal={ workspace = true }
chrono = { version = "0.4", features = ["serde"] }

tempfile = "3.17.1"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
rand = "0.9.0"
rs-snowflake = "0.6.0"
