[package]
name = "common"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
salvo = { workspace = true }
salvo-oapi = { workspace = true }
mongodb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }

nacos-sdk = { workspace = true}
config = { workspace = true }
env_logger = { workspace = true }
toml = { workspace = true }
validator = { workspace = true }
bigdecimal={ workspace = true }

chrono={ workspace = true }


uuid={ workspace = true }

rs-snowflake ={ workspace = true }
