[package]
name = "configs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = {workspace = true }
serde = {workspace = true,features = ["derive"]}
structopt = "0.3.26"
thiserror = "2.0"
log = { workspace = true }
toml = { workspace = true }