[package]
name = "pharos_interact"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
salvo-oapi = { workspace = true }

ethers = { version = "2.0.14", features = ["abigen", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
dotenv = "0.15.0"
rand = "0.9.0"
thiserror = "1.0.69"


anyhow = { workspace = true }
log = "0.4.26"
env_logger = "0.11.6"
chrono = "0.4.40"
async-trait = "0.1"
