[package]
name = "pharos-test"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["abigen", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
dotenv = "0.15.0"
rand = "0.9.1"


[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"